# cereal

./: .gitignore  .travis.yml  CHANGELOG.md  binar-e.cabal  binary-safe.cabal  binary.cabal  cereal.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
bench/: .ghci  .gitignore  Benchmark.hs  build.sh  cereal-bench.cabal
src/Data/: BinarE.hs  Binary.hs  Serialize.hs  SerializeM.hs
src/Data/BinarE/: Builder.hs  Get.hs  Put.hs
src/Data/Binary/: Builder.hs  Compat.hs  Get.hs  Put.hs  Safe.hs
src/Data/Binary/Compat/: Builder.hs  Get.hs  Put.hs
src/Data/Binary/Safe/: Builder.hs  Get.hs  Put.hs
src/Data/Cereal/: Instances.hs  TH.hs
src/Data/Serialize/: Builder.hs  Get.hs  IEEE754.hs  Put.hs
src/Data/SerializeM/: GetT.hs  PutT.hs
tests/: Benchmark.hs  BytesRead.hs  GetTests.hs  HeapUse.hs  Main.hs  Makefile  Parallel.hs  QC.hs  QuickCheckUtils.hs  RoundTrip.hs  Tests.hs
