name:            binary-safe
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          Lennart Kolmodin <kolmodin@dtek.chalmers.se>, Galois Inc.
maintainer:      Galois Inc.
category:        Data, Parsing
stability:       provisional
build-type:      Simple
cabal-version:   >= 1.6
extra-source-files: README index.html

flag bytestring-in-base
  default: False

flag split-base
  default: True

flag applicative-in-base
  default: True

library
  if flag(bytestring-in-base)
    -- bytestring was in base-2.0 and 2.1.1
    build-depends: base >= 2.0 && < 2.2
    cpp-options: -DBYTESTRING_IN_BASE
  else
    -- in base 1.0 and 3.0 bytestring is a separate package
    build-depends: base < 2.0 || >= 3, bytestring >= 0.9

  if flag(split-base)
    build-depends:   base >= 3.0, containers, array
  else
    build-depends:   base < 3.0

  if flag(applicative-in-base)
    build-depends: base >= 2.0
    cpp-options: -DAPPLICATIVE_IN_BASE
  else
    build-depends: base < 2.0
  hs-source-dirs:  src

  exposed-modules: Data.Binary.Safe,
                   Data.Binary.Safe.Put,
                   Data.Binary.Safe.Get,

                   Data.Binary.Compat,
                   Data.Binary.Compat.Builder,
                   Data.Binary.Compat.Get,
                   Data.Binary.Compat.Put

  extensions:      CPP,
                   FlexibleContexts,
                   FlexibleInstances,
                   Rank2Types,
                   MagicHash

  ghc-options:     -O2 -Wall -fliberate-case-threshold=1000
