name:                   cereal
version:                0.4.1.1
license:                BSD3
license-file:           LICENSE
author:                 Lennart Kolmodin <kolmodin@dtek.chalmers.se>,
                        Galois Inc.,
                        Lemmih <lemmih@gmail.com>,
                        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:             Trevor Elliott <trevor@galois.com>
category:               Data, Parsing
stability:              provisional
build-type:             Simple
cabal-version:          >= 1.6
synopsis:               A binary serialization library
extra-source-files:     tests/Benchmark.hs,
                        tests/CBenchmark.c,
                        tests/CBenchmark.h,
                        tests/Makefile,
                        tests/MemBench.hs,
                        tests/Tests.hs
description:
  A binary serialization library, similar to binary, that introduces an isolate
  primitive for parser isolation, and labeled blocks for better error messages.

source-repository head
  type:     git
  location: git://github.com/GaloisInc/cereal.git

flag split-base
        default: True

library
        build-depends:          bytestring
        if flag(split-base)
                build-depends:  base == 4.*, containers, array
        else
                build-depends:  base < 3.0

        if impl(ghc >= 7.2.1)
                cpp-options:    -DGENERICS
                build-depends:  ghc-prim >= 0.2

        hs-source-dirs:         src

        exposed-modules:        Data.Serialize,
                                Data.Serialize.Put,
                                Data.Serialize.Get,
                                Data.Serialize.Builder,
                                Data.Serialize.IEEE754

        extensions:             CPP,
                                FlexibleContexts,
                                FlexibleInstances,
                                Rank2Types,
                                MagicHash

        ghc-options:            -Wall -O2 -funbox-strict-fields
        ghc-prof-options:       -prof -auto-all
