name:                   cereal
version:                0.5.0.0
license:                BSD3
license-file:           LICENSE
author:                 Lennart Kolmodin <kolmodin@dtek.chalmers.se>,
                        Galois Inc.,
                        Lemmih <lemmih@gmail.com>,
                        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:             Trevor Elliott <trevor@galois.com>
category:               Data, Parsing
stability:              provisional
build-type:             Simple
cabal-version:          >= 1.10
synopsis:               A binary serialization library
homepage:               https://github.com/GaloisInc/cereal

description:
  A binary serialization library, similar to binary, that introduces an isolate
  primitive for parser isolation, and labeled blocks for better error messages.

extra-source-files:     CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/GaloisInc/cereal.git

library
        default-language:       Haskell2010

        build-depends:          bytestring >= 0.10.0.0,
                                base == 4.*, containers, array,
                                ghc-prim >= 0.2

        hs-source-dirs:         src

        exposed-modules:        Data.Serialize,
                                Data.Serialize.Put,
                                Data.Serialize.Get,
                                Data.Serialize.IEEE754

        ghc-options:            -Wall -O2 -funbox-strict-fields


test-suite test-cereal
        default-language:       Haskell2010

        type:                   exitcode-stdio-1.0

        build-depends:          base == 4.*,
                                bytestring,
                                QuickCheck,
                                test-framework,
                                test-framework-quickcheck2,
                                cereal

        main-is:                Main.hs
        other-modules:          RoundTrip
                                GetTests

        hs-source-dirs:         tests
